--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   
   margin: 0 auto;
   
-    max-width: 80vh;
+   max-width: 50vw;
    text-align: center;
-  padding: 50px;
+  padding: 100px;
   
   
   
